--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -112,8 +112,8 @@
       "Each element of `NoiseLearnerResult` then contains an object of type:\n",
       " <class 'qiskit_ibm_runtime.utils.noise_learner_result.LayerError'>\n",
       "\n",
-      "And each of these `LayerError` objects possess the following data: \n",
-      "PauliLindbladError(generators=['IIIIIIIIIIIIIIIIIIIIIIIIIIX', 'IIIIIIIIIIIIIIIIIIIIIIIIIIY',\n",
+      "And each of these `LayerError` objects possess data on the generators for the error channel: \n",
+      "['IIIIIIIIIIIIIIIIIIIIIIIIIIX', 'IIIIIIIIIIIIIIIIIIIIIIIIIIY',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIIIIIIZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIXI',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIIIIIXX', 'IIIIIIIIIIIIIIIIIIIIIIIIIXY',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIIIIIXZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIYI',\n",
@@ -145,11 +145,49 @@
       " 'IIIIIIIIIIIIIIIIIIIIIYZIIII', 'IIIIIIIIIIIIIIIIIIIIIZIIIII',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIZXIIII', 'IIIIIIIIIIIIIIIIIIIIIZYIIII',\n",
       " 'IIIIIIIIIIIIIIIIIIIIIZZIIII', 'IIIIIIIIIIIIIIIIIIIIXIIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIXXIIIII', 'IIIIIIIIIIIIIIIIIIIIXYIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIXZIIIII', 'IIIIIIIIIIIIIIIIIIIIYIIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIYXIIIII', 'IIIIIIIIIIIIIIIIIIIIYYIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIYZIIIII', 'IIIIIIIIIIIIIIIIIIIIZIIIIII',\n",
-      " 'IIIIIIIIIIIIIIIIIIIIZXIIIII', 'IIIIIIIIIIIIIIIIIIIIZYIIIII', ...], rates=[0.00063, 0.00071, 0.00106, 0.0006, 0.00011, 0.0, 0.0, 0.00051, 0.0, 0.00011, 0.0, 0.0021, 0.00011, 0.00011, 0.00285, 0.00058, 0.00061, 0.00071, 9e-05, 0.0, 0.00011, 0.0, 0.0007, 0.00022, 0.00013, 0.0, 0.00042, 0.00092, 0.0, 0.0, 0.0, 0.00037, 0.0, 0.0003, 0.00015, 0.00018, 0.0, 0.0001, 0.00035, 0.0004, 0.00099, 0.0, 0.0, 0.00062, 0.00077, 8e-05, 0.00011, 0.00405, 0.00019, 0.00063, 0.00083, 0.0012, 8e-05, 8e-05, 0.00027, 0.0, 1e-05, 0.0002, 0.00024, 0.00038, 0.00028, 9e-05, 0.00032, 0.0025, 0.00071, 0.0, 0.0001, 0.00071, 0.0025, 0.0, 0.00033, 0.00052, 0.00037, 0.00091, 0.00039, 0.00064, 0.00092, 0.00085, 0.00019, 0.0, 0.0, 5e-05, 0.00067, 0.00018, 0.0, 0.00018, 0.00038, 0.00129, 0.0, 0.0, 0.0, 0.0001, 0.0, 0.00025, 0.00022, 0.00024, 0.0, 0.00014, 0.00033, 0.00063, 0.00122, 0.00011, 0.0, 0.00105, 0.0008, 0.0, 0.0, 0.00126, 0.00022, 0.00071, 0.00057, 0.00041, 3e-05, 3e-05, 0.0, 5e-05, 0.0, 0.00014, 0.0, 0.00043, 0.00014, 0.0, 0.0, 0.0005, 0.00095, 0.00017, 4e-05, 0.00084, 0.00062, 0.00017, 0.0, 0.00159, 0.00034, 0.00057, 0.00019, 0.00079, 8e-05, 0.0, 9e-05, 0.00093, 0.0, 8e-05, 9e-05, 0.00245, 3e-05, 3e-05, 0.00193, 0.00067, 0.0011, 0.00096, 0.00033, 0.00022, 0.0, 3e-05, 0.00071, 0.00047, 0.0, 0.00018, 0.00047, 0.0014, 8e-05, 7e-05, 7e-05, 0.00209, 0.0, 0.0001, 8e-05, 0.0015, 0.0, 8e-05, 0.0001, 0.00048, 0.0005, 0.00025, 1e-05, 0.00023, 0.00075, 0.00026, 3e-05, 0.00173, 0.00015, 0.00167, 0.00226, 0.00122, 0.00016, 0.00453, 0.00111, 0.0, 0.0, 0.00266, 0.00012, 0.0, 0.00027, 0.00017, 0.00014, 0.00027, 0.0, 0.00017, 0.00144, 0.0021, 0.0, 0.0, 0.00173, 0.00181, 0.00052, 0.0, 0.00169, 0.0, 0.00058, 0.00056, 0.00071, 0.00013, 0.00013, 1e-05, 1e-05, 0.00012, 0.00016, 0.00026, 0.0, 0.00012, 8e-05, 0.00021, 0.00052, 0.0, 7e-05, 0.0, 0.00077, 0.0, 7e-05, 0.0, 0.00062, 0.0, 3e-05, 0.0, 0.00038, 0.00088, 0.00017, 0.0, 0.00044, 0.00083, 0.00025, 0.0, 0.00211, 7e-05, 0.00041, 0.00049, 0.00098, 0.00084, 0.00058, 0.00037, 0.00047, 0.0, 0.0001, 0.00054, 0.00049, 0.0, 5e-05, 0.00052, 0.00042, 0.0, 0.0, 5e-05, 0.00042, 0.0, 5e-05, 0.0, 0.00082, 0.0, 0.0, 0.0, 0.00175, 0.00047, 0.00046, 0.00047, 0.00257, 0.0, 0.00038, 0.00349, 0.00309, 0.0, 0.0, 0.00297, 0.00062, 0.0, 0.00017, 0.0, 0.00062, 0.0, 0.0, 0.00017, 0.00046, 0.0, 0.00023, 0.00023, 0.00066, 0.0001, 0.0001, 0.00032, 0.00081, 0.00081, 0.00017, 0.00072, 0.00012, 0.00022, 3e-05, 0.00019, 0.0, 0.0007, 0.00033, 0.00022, 0.00012, 3e-05, 0.00018, 0.00014, 0.00109])\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYIIIIII', 'IIIIIIIIIIIIIIIIIIIIZIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIXIIIIIII', 'IIIIIIIIIIIIIIIIIIIXXIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIXYIIIIII', 'IIIIIIIIIIIIIIIIIIIXZIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIYIIIIIII', 'IIIIIIIIIIIIIIIIIIIYXIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIYYIIIIII', 'IIIIIIIIIIIIIIIIIIIYZIIIIII', ...]\n",
+      "\n",
+      "Along with the error rates: \n",
+      "[0.      0.      1.60369 0.10927 0.      0.      0.      0.      0.57734\n",
+      " 0.      0.      0.      0.      0.33384 0.      0.      0.46954 0.\n",
+      " 0.      0.      1.45337 0.      0.      0.      1.45927 0.      0.\n",
+      " 0.      0.      0.      0.27081 0.      0.      0.      0.      1.21831\n",
+      " 1.31075 0.43744 0.43154 0.      0.      0.      0.63214 1.19662 0.\n",
+      " 0.04146 0.      0.      0.      0.      0.      1.12089 0.      0.\n",
+      " 2.23224 0.      1.7048  0.      0.      0.      0.      0.      1.21439\n",
+      " 0.      0.      0.      0.56759 1.19568 0.      0.      0.      0.\n",
+      " 0.      0.      0.      0.53435 0.      0.      0.      0.      1.285\n",
+      " 0.      0.      0.      0.      0.      0.      0.      0.      0.\n",
+      " 1.14073 0.48807 0.      0.55919 0.32766 0.06224 0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.      0.      0.      0.      0.\n",
+      " 0.      0.      0.17972 0.      0.      0.52785 0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.      0.      0.      0.55798 0.\n",
+      " 0.      0.      0.02282 0.      0.      0.      2.28875 0.      0.\n",
+      " 0.85266 0.      0.      0.      0.      0.      0.      0.      0.\n",
+      " 0.      1.34992 0.      0.      0.      0.72797 0.      0.      0.57279\n",
+      " 1.60307 0.      0.      0.      0.      1.6322  0.75916 0.32666 0.\n",
+      " 0.      0.      0.60428 0.      0.      0.      0.      0.      0.\n",
+      " 0.      0.      0.36222 0.      0.      0.      0.      0.      0.\n",
+      " 1.8685  0.      0.      0.      0.15545 0.      0.      0.      0.\n",
+      " 0.      0.06451 0.      0.      0.      0.13886 0.      0.      2.09586\n",
+      " 0.      0.38317 0.      0.      0.      0.      0.38101 0.      0.\n",
+      " 0.43971 0.      0.      0.67455 0.17812 0.      0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.      0.22641 0.      0.      2.04014\n",
+      " 0.      0.      0.02877 0.      0.      0.46702 0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.      0.0634  0.      0.      0.22769\n",
+      " 1.31493 0.24373 0.      0.      0.28669 0.      0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.      0.      0.      0.75998 0.\n",
+      " 0.      0.00658 0.      0.      0.      0.      0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.39175 0.06897 0.      0.03799 0.77028\n",
+      " 0.      0.      0.      0.      0.      1.11918 0.      0.      0.59224\n",
+      " 0.      0.      0.      0.      0.81381 0.      0.      0.      0.\n",
+      " 1.12158 0.      0.      0.      1.46782 0.      0.      0.40964 0.\n",
+      " 0.      0.      0.      0.      0.      0.      0.      0.      0.\n",
+      " 0.      0.      0.      0.      0.      0.      0.33376 0.      0.4805 ]\n",
       "\n"
      ]
     }
