--- a/docs/guides/dynamic-circuits-considerations.ipynb
+++ b/docs/guides/dynamic-circuits-considerations.ipynb
@@ -34,7 +34,7 @@
    "id": "b3d504a0-ce8a-4bfb-aa0a-304c3360e81f",
    "metadata": {},
    "source": [
-    "[Classical feedforward and control flow](./classical-feedforward-and-control-flow) shows how to use Qiskit to build circuits that involve classical feedforward and control flow, also known as dynamic circuits. When actually running such circuits on quantum hardware, there are several considerations and limitations to be aware of. Many of these limitations exist because the underlying technology supporting these features is in an early stage of development, and we hope to be able to address them in the future.\n",
+    "[Classical feedforward and control flow](/guides/classical-feedforward-and-control-flow) shows how to use Qiskit to build circuits that involve classical feedforward and control flow, also known as dynamic circuits. When actually running such circuits on quantum hardware, there are several considerations and limitations to be aware of. Many of these limitations exist because the underlying technology supporting these features is in an early stage of development, and we hope to be able to address them in the future.\n",
     "\n",
     "\n",
     "## Memory limits and latency in control hardware\n",
@@ -57,7 +57,7 @@
     "  - Central controller: Memory usage scales proportionally with the number of resets.\n",
     "- **Measurements**.\n",
     "  - Central controller: Memory usage scales proportionally with the number of measurements used by the central controller for control flow.\n",
-    "\n",
+    "<span id=\"buffer-overflow\"></span>\n",
     "- **Buffer overflow error**. One of the most common limitations users can encounter when executing dynamic circuits is a buffer overflow during measurement result collection. The measurement buffer on the control system can only store a limited number of measurement results. If the circuit performs many measurements in rapid succession, the buffer might fill before the control system has time to stream the results to the host, causing a job failure.\n",
     "\n",
     "  If you encounter the error `\"RuntimeJobFailureError: unable to retrieve job result. A buffer overflow occurred during result collection...\"`, try these strategies to mitigate this issue:\n",
