--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -1,15 +1,23 @@
 ---
 title: Latest updates
-description: The latest updates from Qiskit and IBM Quantum, including the latest package release summaries, news, and events.
+description: The latest updates from Qiskit and IBM Quantum, including the latest package release summaries and platform updates.
+in_page_toc_min_heading_level: 2
+in_page_toc_max_heading_level: 2
+
 ---
 
 # Latest updates
 
-*Last updated 26 February 2025*
+*Last updated 27 March 2025*
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
-Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;! Gathered here are the most recent Qiskit package release summaries, documentation updates, blogs, community events, and more.
+Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;!
 
+For all product announcements, visit the [Announcements](https://docs.quantum.ibm.com/announcements/product-updates) page on IBM Quantum Platform Classic.
+
+Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+
+<span id="latest-platform"></span>
 ##  IBM Quantum Platform
 
 ### The next evolution of IBM Quantum Platform: How to prepare for the transition
@@ -26,11 +34,8 @@ We are upgrading the Platform as part of our effort to deliver an enterprise-gra
 
 - For full details on the early access release and upcoming improvements, [check out the blog](https://www.ibm.com/quantum/blog/iqp-upgrade).
 
-## Latest release summaries
-
-{/* release summaries written by product owners */}
-
-### Qiskit SDK v1.3.0
+<span id="latest-qiskit-sdk"></span>
+## Qiskit SDK v1.3.0
 
 *To see the release notes for all versions, visit the [Qiskit SDK release notes](/api/qiskit/release-notes).*
 
@@ -49,25 +54,60 @@ Explore the [v1.3 release notes](/api/qiskit/release-notes/1.3), and read about 
 
 {/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
-### Qiskit Runtime client 0.28.0
+<span id="latest-qiskit-runtime"></span>
+## Qiskit Runtime client 0.28.0
 
 *To see the release notes for all versions, visit the [Qiskit Runtime client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
 **Highlights from the 0.28.0 (2024-08-15) version release**
 
-#### Removal
+### Removal
 
 - The V1 primitives `SamplerV1` and `EstimatorV1` have been completely removed. Refer to the [migration guide](/migration-guides/v2-primitives) for instructions on migrating to V2 primitives.
 - The `service` parameter is now required in `Session.from_id()`.
 
-#### New features
+### New features
 
 - You can now use the `layer_noise_model` option in `ResilienceOptionsV2` to pass in a noise model. When this field is set, all the mitigation strategies that require noise data skip the noise learning stage, and instead gather the required information from `layer_noise_model`. You can use the [NoiseLearner](/api/qiskit-ibm-runtime/noise-learner-noise-learner) class to learn noise and use it in a subsequent `Estimator` call.
 
 See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2024-08-15).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
-### Qiskit Transpiler Service client v0.3.0
+<span id="latest-runtime-service"></span>
+## Qiskit Runtime service
+
+This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use.
+
+**15 August 2024**
+
+- Probabilistic error amplification (PEA) error mitigation method is now available for Estimator V2. See the [`ZneOptions` API reference](/api/qiskit-ibm-runtime/options-zne-options) for more details.
+- A new helper program `noise-learner` is now available. It allows characterizing the noise processes affecting the gates in one or more circuits of interest, based on the Pauli-Lindblad noise model. The output noise model can then be passed to Estimator via the `layer_noise_model` option.
+- V1 primitives are no longer supported.
+
+<details>
+<summary><b>Previous updates</b></summary>
+**3 July 2024**
+
+The following endpoints are deprecated and will be removed on or after 3 October 2024: [`GET /stream/jobs`](/api/runtime/tags/jobs#tags__jobs__operations__get_stream_jobs_state_updates) and [`GET /stream/jobs/{id}`](/api/runtime/tags/jobs#tags__jobs__operations__get_stream_job_logs_jid). This removal has the following impacts:
+
+- After the endpoints are removed, `job.stream_results()` and `job.interim_results()` will be removed from the [qiskit-ibm-runtime](/api/qiskit-ibm-runtime) client.
+- Additional methods, such as `job.result()` currently use the deprecated endpoints.  Upgrade to `qiskit_ibm_runtime` 0.25 or later before the endpoints are removed to avoid disruption.
+
+**18 June 2024**
+
+The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than 30 September 2024.
+
+**3 June 2024**
+
+Probabilistic error amplification (PEA) error mitigation method is now available as an experimental option for Estimator V2. See the [`EstimatorOptions` API reference](/api/qiskit-ibm-runtime/options-estimator-options) for more details.
+
+**28 March 2024**
+
+Qiskit Runtime primitives now support OpenQASM 3 as the input format for circuits and standard JSON output format. See [Qiskit Runtime REST API](/api/runtime) for examples.
+</details>
+
+<span id="latest-qiskit-transpiler-service"></span>
+## Qiskit Transpiler Service client v0.3.0
 
 We’re pleased to share that the beta release of the Qiskit Transpiler Service is now available to all IBM Quantum&reg; Premium Plan users.
 
@@ -77,44 +117,20 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 {/* no other release notes available yet */}
 
+<span id="latest-qiskit-functions"></span>
+## Qiskit Functions
+
+{/* need a blurb about the types of content here */}
+
 ### Qiskit Functions Catalog Service client v0.1.0
 
 Introducing the Qiskit Functions preview, for IBM Quantum Premium Plan users. To get started, `pip install qiskit-ibm-catalog`, and explore the [Qiskit Functions documentation](/guides/functions). With the Qiskit Functions Catalog client, you can submit workloads to abstracted services designed to accelerate your research - sign in with your existing IBM Quantum Platform credentials.
 
 Premium Plan users can get started right away with the IBM&reg; Circuit function, or request access to circuit or application functions from our partners.
 
-## Qiskit Runtime service updates
+### Qiskit Functions Catalog updates
 
-This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use.
-
-### 15 August 2024
-
-- Probabilistic error amplification (PEA) error mitigation method is now available for Estimator V2. See the [`ZneOptions` API reference](/api/qiskit-ibm-runtime/options-zne-options) for more details.
-- A new helper program `noise-learner` is now available. It allows characterizing the noise processes affecting the gates in one or more circuits of interest, based on the Pauli-Lindblad noise model. The output noise model can then be passed to Estimator via the `layer_noise_model` option.
-- V1 primitives are no longer supported.
-
-### 3 July 2024
-
-The following endpoints are deprecated and will be removed on or after 3 October 2024: [`GET /stream/jobs`](/api/runtime/tags/jobs#tags__jobs__operations__get_stream_jobs_state_updates) and [`GET /stream/jobs/{id}`](/api/runtime/tags/jobs#tags__jobs__operations__get_stream_job_logs_jid). This removal has the following impacts:
-
-- After the endpoints are removed, `job.stream_results()` and `job.interim_results()` will be removed from the [qiskit-ibm-runtime](/api/qiskit-ibm-runtime) client.
-- Additional methods, such as `job.result()` currently use the deprecated endpoints.  Upgrade to `qiskit_ibm_runtime` 0.25 or later before the endpoints are removed to avoid disruption.
-
-### 18 June 2024
-
-The `optimization_level` option is deprecated for Estimator V2 and will be removed no sooner than 30 September 2024.
-
-### 3 June 2024
-
-Probabilistic error amplification (PEA) error mitigation method is now available as an experimental option for Estimator V2. See the [`EstimatorOptions` API reference](/api/qiskit-ibm-runtime/options-estimator-options) for more details.
-
-### 28 March 2024
-
-Qiskit Runtime primitives now support OpenQASM 3 as the input format for circuits and standard JSON output format. See [Qiskit Runtime REST API](/api/runtime) for examples.
-
-## Qiskit Functions Catalog updates
-
-### 16 September 2024
+**16 September 2024**
 
 The Qiskit Functions Catalog preview provides access to Premium Plan users to explore the available functions, including those written by IBM and those written by other members of our ecosystem. The catalog contains two kinds of functions: circuit functions and application functions.
 
@@ -126,36 +142,21 @@ With the launch of the Qiskit Functions Catalog, Premium Plan developers will be
 
 Users can purchase licenses for the following functions contributed by our partners at Q-CTRL, QEDMA, Algorithmiq, and Qunasys.
 
-### Circuit functions
+**Circuit functions**
 
 - Q-CTRL is releasing a circuit function that applies AI-driven quantum control techniques, with which users can scale successfully to larger problems.
 - Algorithmiq is releasing a circuit function that applies TEM (tensor-network error mitigation), an error mitigation method for obtaining estimators with fewer shots than the PEC (probabilistic error cancellation) method.
 - QEDMA is releasing a circuit function that uses proprietary protocols for efficient and accurate characterization of the noisy QPU operations, and applies error suppression and error mitigation based on the characterization data.
 
-### Application functions
+**Application functions**
 
 - QunaSys is releasing a chemistry application function comprising three algorithms meant to solve the ground state energy estimation (GSEE) problem.
 - Q-CTRL is also releasing an optimization solver with which users can pass a graph or an objective, and receive solution costs.
 
 To get started, explore the [Qiskit Functions documentation](/guides/functions).
 
-
-## IBM Quantum blog: Two new blogs in January
-
-*Browse all blogs at the [IBM Quantum blog page](https://www.ibm.com/quantum/blog).*
-
-{/* Bring over the Quantum news (blog) announcement post */}
-
-The first IBM Quantum blog post of the year takes a look back at some of the amazing tools released in 2024 that help make quantum software development easier and more accessible than ever before.
-The blog provides recaps of major releases from last year, including Qiskit v1.x, Qiskit addons, Qiskit Transpiler Service, and more - all with code examples and documentation links to help readers get started using them.
-
-*Blog: [A year of simplifying quantum software development tools with Qiskit](https://www.ibm.com/quantum/blog/dev-tools)*
-
-Next, read how dynamic circuits can enable remarkably efficient long-range entanglement between qubits in a quantum chip. The method was first demonstrated by IBM researchers via a recent paper published in PRX Quantum, and the researchers behind it say their technique could greatly enhance the level of complexity we can represent in quantum circuits through qubit entanglement. The blog explores the power of dynamic circuits and explains how the new method differs from traditional approaches for establishing entanglement between qubits that are not directly connected to each other.
-
-*Blog: [Using dynamic circuits to efficiently implement quantum states with long-range entanglement](https://www.ibm.com/quantum/blog/long-range-entanglement)*
-
-## What's new in the documentation
+<span id="latest-docs"></span>
+## Documentation
 
 {/* Copy over the latest "What's new in the docs" announcement */}
 
@@ -222,12 +223,3 @@ Updates to the infrastructure and design of the documentation include the follow
 
 *A huge thank you goes out to everyone in the open-source community who contributed and gave feedback!* Please [open an issue](https://github.com/Qiskit/documentation/issues/new/choose) if you find a bug, have a suggestion, or want to share your experience.
 
-## Qiskit global community events
-
-Join, participate, contribute! See what events are coming up on the [Qiskit community events calendar](https://www.ibm.com/quantum/community#events).
-
-## See all product updates
-
-<Admonition type="tip" title="">
-Visit the [Product announcements](/announcements/product-updates) to browse all product updates and news.
-</Admonition>
