--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -15,8 +15,14 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum&reg;!
 
 For all product announcements, visit the [Announcements](https://docs.quantum.ibm.com/announcements/product-updates) page on IBM Quantum Platform Classic.
 
+<CloudContent>
 Jump to [IBM Quantum Platform](#latest-platform) | [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+</CloudContent>
+<LegacyContent>
+Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime Client](#latest-qiskit-runtime) | [Qiskit Runtime Service](#latest-runtime-service) | [Qiskit Transpiler Service](#latest-qiskit-transpiler-service) | [Qiskit Functions](#latest-qiskit-functions) | [Documentation](#latest-docs)
+</LegacyContent>
 
+<CloudContent>
 <span id="latest-platform"></span>
 ##  IBM Quantum Platform
 
@@ -34,6 +40,7 @@ We are upgrading the Platform as part of our effort to deliver an enterprise-gra
 
 - For full details on the early access release and upcoming improvements, [check out the blog](https://www.ibm.com/quantum/blog/iqp-upgrade).
 
+</CloudContent>
 <span id="latest-qiskit-sdk"></span>
 ## Qiskit SDK v1.3.0
 
