--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -62,22 +62,26 @@ Explore the [v1.3 release notes](/api/qiskit/release-notes/1.3), and read about 
 {/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
 <span id="latest-qiskit-runtime"></span>
-## Qiskit Runtime client 0.28.0
+## Qiskit Runtime client Qiskit Runtime client 0.37.0
 
 *To see the release notes for all versions, visit the [Qiskit Runtime client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
-**Highlights from the 0.28.0 (2024-08-15) version release**
+**Highlights from the 0.37.0 (13 March 2025) version release**
 
-### Removal
+**Deprecation**
 
-- The V1 primitives `SamplerV1` and `EstimatorV1` have been completely removed. Refer to the [migration guide](/migration-guides/v2-primitives) for instructions on migrating to V2 primitives.
-- The `service` parameter is now required in `Session.from_id()`.
+The `IBMBackend` attributes `max_shots` and `max_experiments`, as well as the property `max_circuits`, have all been deprecated. These attribute values used to represent the maximum number of shots and circuits that could be submitted in one job. See [job limits](/guides/job-limits#job-limits) for details.
 
-### New features
+**New features**
 
-- You can now use the `layer_noise_model` option in `ResilienceOptionsV2` to pass in a noise model. When this field is set, all the mitigation strategies that require noise data skip the noise learning stage, and instead gather the required information from `layer_noise_model`. You can use the [NoiseLearner](/api/qiskit-ibm-runtime/noise-learner-noise-learner) class to learn noise and use it in a subsequent `Estimator` call.
+`qiskit-ibm-runtime` is now compatible with Qiskit v2.0. This means that classes and methods removed in Qiskit v2.0 have also been removed or handled accordingly.  The `pulse`- and `channel`-related changes are highlighted in the following list. See the [Pulse migration guide](/migration-guides/pulse-migration) for details.
 
-See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2024-08-15).
+  - `Channel` methods in `IBMBackend` have been removed.
+  - The backend configuration class `PulseBackendConfiguration` has been removed, so all backends will now be returned as `QasmBackendConfiguration`.
+  - `PulseDefaults` (backend defaults) can still be retrieved but they are no longer necessary when creating a backend `Target`.
+
+
+See the full [0.37.0 release notes](/api/qiskit-ibm-runtime/release-notes#0370-2025-03-13).
 {/* use url format /api/qiskit-ibm-runtime/release-notes#0XYZ to link to the specific 0.XY.Z version of the release notes */}
 
 <span id="latest-runtime-service"></span>
@@ -85,14 +89,49 @@ See the full [0.28.0 release notes](/api/qiskit-ibm-runtime/release-notes#0280-2
 
 This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use.
 
+**3 February 2025**
+
+Pulse-level control on all IBM Quantum processors has been removed.  Additionally, the pulse module is scheduled for removal in Qiskit SDK v2.0.  Instead, you can use fractional gates that are now built into the Instruction Set Architecture (ISA). For full details and help migrating your code, refer to [Migrate from Qiskit Pulse to fractional gates.](/migration-guides/pulse-migration)
+
+<details>
+<summary><b>Previous updates</b></summary>
+
+**2 February 2025**
+
+Starting 2 June 2025 and continuing through the year, IBM Quantum will begin a gradual rollout of new features to [dynamic circuits](/guides/classical-feedforward-and-control-flow) that will enable them at the utility scale.
+Improvements include the following:
+
+- A 75x speedup in execution by using the [Gen3 engine stack](/guides/runtime-options-overview#experimental-option-note)
+- Parallel execution of branches, which reduces circuit duration and improves result quality
+- Improvement in mid-circuit measurement
+- Better integration with dynamical decoupling
+- More visibility of circuit timing information
+
+To accelerate the rollout, the following capabilities are now deprecated and will be no longer supported on or around 2 June 2025:
+
+- The `while`, `for`, and `switch` control flow constructs
+- The ability to use control flow instructions inside the body of a branch (as in, nested control flow)
+- Conditional measurements
+
+
+**7 January 2025**
+
+The rollout of the Gen3 engine stack begins today. This engine stack gives a 75x speedup in execution.  The rollout will be done on one QPU at a time, where a percentage of the jobs on the QPU will use the Gen3 path.  You can also force the Gen3 path using the [`gen3-turbo` experimental option.](/guides/runtime-options-overview#available-options) Note that this engine stack is not compatible with fractional gates, pulse gates, or dynamic circuits.
+
+**15 October 2024**
+
+Support for `backend.run` has ended. See the appropriate [migration guide](/migration-guides/qiskit-runtime) if you have not yet migrated to using primitives.
+
+**1 October 2024**
+
+Parameterized delay gates have been deprecated.
+
 **15 August 2024**
 
 - Probabilistic error amplification (PEA) error mitigation method is now available for Estimator V2. See the [`ZneOptions` API reference](/api/qiskit-ibm-runtime/options-zne-options) for more details.
 - A new helper program `noise-learner` is now available. It allows characterizing the noise processes affecting the gates in one or more circuits of interest, based on the Pauli-Lindblad noise model. The output noise model can then be passed to Estimator via the `layer_noise_model` option.
 - V1 primitives are no longer supported.
 
-<details>
-<summary><b>Previous updates</b></summary>
 **3 July 2024**
 
 The following endpoints are deprecated and will be removed on or after 3 October 2024: [`GET /stream/jobs`](/api/runtime/tags/jobs#tags__jobs__operations__get_stream_jobs_state_updates) and [`GET /stream/jobs/{id}`](/api/runtime/tags/jobs#tags__jobs__operations__get_stream_job_logs_jid). This removal has the following impacts:
