--- a/docs/api/qiskit-addon-cutting/index.mdx
+++ b/docs/api/qiskit-addon-cutting/index.mdx
@@ -13,6 +13,7 @@ description: Index of all the modules in the latest version of qiskit-addon-cutt
 *   [Bitwise utilities (`qiskit_addon_cutting.utils.bitwise`)](utils-bitwise)
 *   [Iteration utilities (`qiskit_addon_cutting.utils.iteration`)](utils-iteration)
 *   [Observable grouping (`qiskit_addon_cutting.utils.observable_grouping`)](utils-observable-grouping)
+*   [Observable terms (`qiskit_addon_cutting.utils.observable_terms`)](utils-observable-terms)
 *   [Simulation utilities (`qiskit_addon_cutting.utils.simulation`)](utils-simulation)
 *   [Transforms (`qiskit_addon_cutting.utils.transforms`)](utils-transforms)
 *   [Transpiler passes (`qiskit_addon_cutting.utils.transpiler_passes`)](utils-transpiler-passes)
